--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
 <div id="game">
-  <h1>Spelling Bee</h1>
+  <h1>Fruit Guessing Game</h1>
   <p id="word"></p>
   <input type="text" id="input">
   <button onclick="check()">Check</button>
